--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
       context: ./web
       dockerfile: Dockerfile
     ports:
-      - 1110:80
+      - ${PORT_WEB}:80
   python:
     build:
       context: ./python
       dockerfile: Dockerfile
     ports:
-      - 1111:1111
+      - ${PORT_PYTHON}:1111
